# LastAPI

./: .gitignore  README.md  pyproject.toml  start_server.sh
app/: main.py  models.py
tests/: test_main.py
